kubernetes/apps/network/agentgateway/models/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: agentgateway-models
spec:
  selector:
    app.kubernetes.io/name: agentgateway-models
  ports:
    - port: 8080
      targetPort: http
      name: http
